bin_PROGRAMS = atlas2dnst parse_dnst iter_dnsts cap_counter mk_asn_tables lookup_asn

atlas2dnst_SOURCES = atlas2dnst.c jsmn.c
parse_dnst_SOURCES = parse_dnst.c
iter_dnsts_SOURCES = iter_dnsts.c rbtree.c rr-iter.c
cap_counter_SOURCES= cap_counter.c table4.c table6.c ranges.c rbtree.c
mk_asn_tables_SOURCES = mk_asn_tables.c
lookup_asn_SOURCES = lookup_asn.c table4.c table6.c ranges.c
iter_dnsts_LDADD = @LIBOBJS@

